<resources>
    <string name="app_name">Mini_Project</string>
    <string name="navigation_open">Open Navigation drawer</string>
    <string name="navigation_close">Close Navigation drawer</string>
    <string name="topics_tv1">Android \nIntroduction</string>
    <string name="topics_tv2">Android\nArchitecture</string>
    <string name="topics_tv3">Android\n IDE</string>
    <string name="topics_tv4">Android\nComponents</string>
    <string name="topics_tv5">Manifest\nFile</string>
    <string name="topics_tv6">Activities</string>
    <string name="topics_tv7">Fragment</string>
    <string name="topics_tv8">Android\nIntent</string>
    <string name="topics_tv9">Services</string>
    <string name="topics_tv10">Resources</string>
    <string name="topics_tv11">UI \n Layouts</string>
    <string name="topics_tv12">UI \n Widgets</string>
    <string name="topics_tv13">Android \nMenu</string>
    <string name="topics_tv14">Broadcast\nReceivers</string>
    <string name="topics_tv15">Content\nProvider</string>
    <string name="topics_tv16">Containers</string>
    <string name="topics_tv17">Data\nStorage</string>
    <string name="topics_tv18">JASON\nParsing</string>
    <string name="introduction_tv1">Introduction</string>
    <string name="introduction_tv2">      Android is a Linux based operating system. It is designed primarily for touch screen mobile devices such as tablet computers and smartphones. The android operating system has developed more in last 15 years starting from black and white phones to recent smartphones or mini computers. \n\n     The android is a powerful operating system and it supports large number of applications in Smartphones and other supportable devices. These applications are more comfortable and advanced for the users. The hardware that supports android software is based on ARM architecture platform.\n\n      The android is an open source operating system it means no license, distribution and development fee and any one can use it. The android has got millions of apps available that can help you managing your life easily and it is available in low prices in market that why android is very popular.\n\n      The android development supports with the full java programming language. Even other packages that are API and JSE are not supported. The first version 1.0 of software development kit (SDK) was released in 2008 and latest updated version is 9.0 with code name of Pie.</string>
    <string name="introduction_tv3">History of Android</string>
    <string name="introduction_tv4">      The code names of android are from A to P at present, such as Aestro, Blender, Cupcake, Donut, Eclair, Froyo, Gingerbread, Honeycomb, Ice Cream Sandwitch, Jelly Bean, KitKat, Lollipop, Marshmallow, Nougat, Oreo and Pie. Let\'s understand the android history below. \n\nAndy Rubin founded Android Incorporation in Palo Alto, California, United States in October, 2003.\n\nGoogle acquired android Incorporation in 17th August 2005. Since then, it is in the subsidiary of Google Incorporation.\n\nThe key employees of Android Incorporation are Andy Rubin, Rich Miner, Chris White and Nick Sears.\n\nAndroid is the nick name of Andy Rubin given by coworkers because of his love to robots. Google announces the development of android OS in 2007.\nThe first phone released that ran the Android OS which is T-Mobile G1.HTC launched the first android mobile in 2008.</string>
    <string name="introduction_tv5">Features of Android</string>
    <string name="introduction_tv6">      As Android is open source and freely available to manufacturers for customization, there are no fixed hardware and software configurations.\n\nHowever, Android itself supports the following features:\n   1. Storage — Uses SQLite, a lightweight relational database, for data storage.\n  2. Connectivity — Supports GSM/EDGE, IDEN, CDMA, EV-DO, UMTS, Bluetooth (includes A2DP and AVRCP), WiFi, LTE, and WiMAX.\n    3. Messaging — Supports both SMS and MMS.\n  4. Web browser — Based on the open-source WebKit, together with Chrome’s V8 JavaScript engine.\n  5. Media support — Includes support for the following media: H.263, H.264 (in 3GP or MP4 container), MPEG-4 SP, AMR, AMR-WB (in 3GP container), AAC, HE-AAC (in MP4 or 3GP container), MP3, MIDI, Ogg Vorbis, WAV, JPEG, PNG, GIF, and BMP.\n  6. Hardware support — Accelerometer Sensor, Camera, Digital Compass, Proximity Sensor, and GPS Multi.\n  7. Multi-touch — Supports multi-touch screens Multi.\n  8. Multi-tasking — Supports multi-tasking applications.\n  9. Flash support — Android 2.3 supports Flash 10.1.\n  10. Tethering — Supports sharing of Internet connections as a wired/wireless hotspot.</string>
    <string name="introduction_tv7">History of Android</string>
    <string name="architecture_tv1">Android Architecture or Android Software Stack</string>
    <string name="architecture_tv2">Linux kernel</string>
    <string name="architecture_tv3">      The android uses the powerful Linux kernel and it supports wide range of hardware drivers. The kernel is the heart of the operating system that manages input and output requests from software. This provides basic system functionalities like process management, memory management, device management like camera, keypad, display etc the kernel handles all the things. The Linux is really good at networking and it is not necessary to interface it to the peripheral hardware. The kernel itself does not interact directly with the user but rather interacts with the shell and other programs as well as with the hard ware devices on the system.</string>
    <string name="architecture_tv4">Android Libraries</string>
    <string name="uilayout_tv1">Android UI Layouts</string>
    <string name="uilayout_tv2">    The basic building block for android user interface(UI) is a View object which is created from the View class and it is occupied in rectangular area on the screen and it is responsible for interacting with user, drawing and event handling. View is the base class for widgets, which are used to create interactive user interface(UI) components like buttons, check box, text fields, etc.</string>
    <string name="uilayout_tv3">Views and ViewGroups</string>
    <string name="uilayout_tv4">    An Activity contains Views and ViewGroups. In android a View is a widget that visible on screen. Examples of widgets are buttons, labels, check box, text boxes, etc. A View derives from the base class android.view.View. The ViewGroup is a subclass of View and it provides invisible container that hold the other Views or the other ViewGroups and define their layout properties.</string>
    <string name="uilayout_tv5">    At third stage we have different layouts which are subclasses of ViewGroup class and for an user interface(UI) a typical layout defines the visual structure and can be created either at run time using View or ViewGroup objects or you can also declare your layout using simple XML file activity_main_layout.xml which is located in the res/layout folder of your project.</string>
    <string name="uilayout_tv6">Layouts</string>
    <string name="uilayout_tv7">    Android user interface(UI) Layout in which you can use in almost all the Android applications to provide different view, look and feel. The  seven different  Layouts are:-</string>
    <string name="uilayout_tv8">
    1.Linear Layout
    2.Relative Layout
    3.Absolute Layout
    4.Table Layout
    5.Frame Layout
    6.List view
    7.Grid view</string>
    <string name="uilayout_tv9">1.Linear Layout</string>
    <string name="uilayout_tv10">In Android a LinearLayout is a view group that aligns all the children in a single direction may be horizontally or vertically. And it also supports assigning a weight to individual children with the android:layout_weight attribute. Either Horizontally or Vertically orientation and this behavior is set in android:orientation which is an attribute of the node LinearLayout.</string>
    <string name="uilayout_tv11">Horizontal layout xml snippet</string>
    <string name="uilayout_tv12">  horizontal Layout Snippet code</string>
    <string name="uilayout_tv13">  Vertical layout xml snippet</string>
    <string name="uilayout_tv14">  Vertical Layout Snippet code </string>
    <string name="uilayout_tv15">2.Relative Layout</string>
    <string name="uilayout_tv16">RelativeLayout is a view group which specifies how child views are positioned relatively to each other. Then each view positioned as relative to sibling elements. you can use like some attributes "below, above, right and left" to arrange the component position.</string>
    <string name="uilayout_tv17">RelativeLayout xml snippet</string>
    <string name="uilayout_tv18">RelativeLayout xml snippet code </string>
    <string name="uilayout_tv19">3.Table Layout</string>
    <string name="uilayout_tv20">TableLayout is a layout which groups views into rows and columns.
And it is very easy to understand.</string>
    <string name="uilayout_tv21">Table Layout xml snippet</string>
    <string name="uilayout_tv22">Table Layout xml snippet code </string>
    <string name="uilayout_tv23">4.Absolute Layout</string>
    <string name="uilayout_tv24">AbsoluteLayout is a layout which allows you to specify the exact location of its children. It is less flexible and harder to maintain than other types of layouts without absolute positioning.</string>
    <string name="uilayout_tv25">Absolute Layout xml snippet</string>
    <string name="uilayout_tv26">Absolute  Layout xml snippet code </string>
    <string name="uilayout_tv27">5.Frame Layout</string>
    <string name="uilayout_tv28">The FrameLayout is a layout in which a placeholder on a screen that you can use to display a single view.</string>
    <string name="uilayout_tv29">FrameLayout xml snippet</string>
    <string name="uilayout_tv30">Frame  Layout xml snippet code </string>
    <string name="uilayout_tv31">6.ListView</string>
    <string name="uilayout_tv32">Listview is a view group that displays a list of scrollable items on a screen. The list items are automatically inserted to the list using an adapter that pulls the content from a source such as an array or database query and converts each item result into a view that\'s placed into the list.</string>
    <string name="uilayout_tv33">ListView xml snippet</string>
    <string name="uilayout_tv34">List View xml snippet code </string>
    <string name="provider_tv1">Content Provider</string>
    <string name="provider_tv2">In android a Content Provider component exchange the data from one application to others application on request. Such type of requests are handled by the methods of the ContentResolver class. In every application, by default, has an unique Id and different storage path in OS for security purposes and they run on different processes. This is called App Sandbox. A content provider can use different ways to store its data and the data can be stored in files, in a database or even over a network.\n\nWhat content provider does is abstraction to inter-process communication.\n\nThere is four basic operations in Content Providers, generally called CRUD-operations. CRUD is the acronym for create, read, update and delete. And those objects simply represent the data as most often a record of a database, but they could also be an image on your SD-card or a video on the web.\n\nImplemention of a content provider involves always the following steps: \n\n   1. Create a class that extends ContentProvider \n   2. Create a contract class \n   3. Create the UriMatcher definition \n   4. Implement the onCreate() method \n   5. Implement the getType() method \n   6. Implement the CRUD methods \n   7. Add the content provider to your AndroidManifest.xml
</string>
    <string name="provider_tv3">Syntax</string>
</resources>