<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".architecture">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="70dp"
        android:background="@drawable/header">

        <ImageView
            android:id="@id/iv1"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_gravity="center_vertical"
            android:layout_marginStart="10dp"
            android:src="@drawable/back"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="Architecture"
            android:layout_marginStart="65dp"
            android:gravity="center_vertical"
            android:fontFamily="sans-serif-medium"
            android:textSize="30sp"
            android:textStyle="bold"
            android:textColor="@color/white"/>
    </LinearLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="70dp">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/tv1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:layout_marginStart="10dp"
                android:text="@string/uilayout_tv1"
                android:textSize="30sp"
                android:textStyle="bold"/>

<!--            <ImageView-->
<!--                android:id="@+id/iv"-->
<!--                android:layout_width="500dp"-->
<!--                android:layout_height="300dp"-->
<!--                android:layout_marginRight="10dp"-->
<!--                android:layout_marginTop="10dp"-->
<!--                android:layout_marginLeft="10dp"-->
<!--                app:srcCompat="@drawable/architecture"-->
<!--                android:layout_below="@id/tv1"/>-->

            <TextView
                android:id="@+id/tv2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:layout_marginStart="10dp"
                android:text="@string/uilayout_tv2"
                android:textSize="15sp"
                android:lineSpacingExtra="5sp"
                android:layout_below="@id/tv1"
              />

            <TextView
                android:id="@+id/tv3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/tv2"
                android:layout_marginStart="10dp"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="10dp"
                android:justificationMode="inter_word"
                android:lineSpacingExtra="5sp"
                android:text="@string/uilayout_tv3"
                android:textSize="20sp"
                android:textStyle="bold"/>

            <TextView
                android:id="@+id/tv4"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:layout_marginStart="10dp"
                android:text="@string/uilayout_tv4"
                android:textSize="15sp"
                android:lineSpacingExtra="5sp"
                android:layout_below="@id/tv3"
                />

            <TextView
                android:id="@+id/tv5"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/tv4"
                android:layout_marginStart="10dp"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="10dp"
                android:justificationMode="inter_word"
                android:lineSpacingExtra="5sp"

                android:text="@string/uilayout_tv5"
                android:textSize="15sp" />

            <TextView
                android:id="@+id/tv6"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/tv5"
                android:layout_marginStart="10dp"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="10dp"
                android:justificationMode="inter_word"
                android:lineSpacingExtra="5sp"
                android:text="@string/uilayout_tv6"
                android:textSize="20sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/tv7"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:layout_marginStart="10dp"
                android:text="@string/uilayout_tv7"
                android:textSize="15sp"
                android:lineSpacingExtra="5sp"
                android:layout_below="@id/tv6"
                />

            <TextView
                android:id="@+id/tv8"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/tv7"
                android:layout_marginStart="10dp"
                android:layout_marginTop="0dp"
                android:layout_marginEnd="10dp"
                android:justificationMode="inter_word"
                android:lineSpacingExtra="5sp"
                android:text="@string/uilayout_tv8"
                android:textSize="15sp" />

            <TextView
                android:id="@+id/tv9"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:layout_marginStart="10dp"
                android:text="@string/uilayout_tv9"
                android:textSize="20sp"
                android:layout_below="@id/tv8"
                android:textStyle="bold"/>

            <TextView
                android:id="@+id/tv10"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/tv9"
                android:layout_marginStart="10dp"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="10dp"
                android:justificationMode="inter_word"
                android:lineSpacingExtra="5sp"
                android:text="@string/uilayout_tv10"
                android:textSize="15sp" />

            <TextView
                android:id="@+id/tv11"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:layout_marginStart="10dp"
                android:text="@string/uilayout_tv11"
                android:textSize="20sp"
                android:layout_below="@id/tv10"
                android:textStyle="bold"/>

            <TextView
                android:id="@+id/tv12"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/tv11"
                android:layout_marginStart="10dp"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="10dp"
                android:justificationMode="inter_word"
                android:lineSpacingExtra="5sp"
                android:text="@string/uilayout_tv12"
                android:textSize="15sp" />
            <TextView
                android:id="@+id/tv13"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:layout_marginStart="10dp"
                android:text="@string/uilayout_tv13"
                android:textSize="20sp"
                android:layout_below="@id/tv12"
                android:textStyle="bold"/>
            <TextView
                android:id="@+id/tv14"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/tv13"
                android:layout_marginStart="10dp"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="10dp"
                android:justificationMode="inter_word"
                android:lineSpacingExtra="5sp"
                android:text="@string/uilayout_tv14"
                android:textSize="15sp" />

            <TextView
                android:id="@+id/tv15"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:layout_marginStart="10dp"
                android:text="@string/uilayout_tv15"
                android:textSize="20sp"
                android:layout_below="@id/tv14"
                android:textStyle="bold"/>
            <TextView
                android:id="@+id/tv16"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/tv15"
                android:layout_marginStart="10dp"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="10dp"
                android:justificationMode="inter_word"
                android:lineSpacingExtra="5sp"
                android:text="@string/uilayout_tv16"
                android:textSize="15sp" />
            <TextView
                android:id="@+id/tv17"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:layout_marginStart="10dp"
                android:text="@string/uilayout_tv17"
                android:textSize="20sp"
                android:layout_below="@id/tv16"
                android:textStyle="bold"/>

            <TextView
                android:id="@+id/tv18"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/tv17"
                android:layout_marginStart="10dp"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="10dp"
                android:justificationMode="inter_word"
                android:lineSpacingExtra="5sp"
                android:text="@string/uilayout_tv18"
                android:textSize="15sp" />

            <TextView
                android:id="@+id/tv19"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:layout_marginStart="10dp"
                android:text="@string/uilayout_tv19"
                android:textSize="20sp"
                android:layout_below="@id/tv18"
                android:textStyle="bold"/>
            <TextView
                android:id="@+id/tv20"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/tv19"
                android:layout_marginStart="10dp"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="10dp"
                android:justificationMode="inter_word"
                android:lineSpacingExtra="5sp"
                android:text="@string/uilayout_tv20"
                android:textSize="15sp" />
            <TextView
                android:id="@+id/tv21"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:layout_marginStart="10dp"
                android:text="@string/uilayout_tv21"
                android:textSize="20sp"
                android:layout_below="@id/tv20"
                android:textStyle="bold"/>

            <TextView
                android:id="@+id/tv22"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/tv21"
                android:layout_marginStart="10dp"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="10dp"
                android:justificationMode="inter_word"
                android:lineSpacingExtra="5sp"
                android:text="@string/uilayout_tv22"
                android:textSize="15sp" />


            <TextView
                android:id="@+id/tv23"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:layout_marginStart="10dp"
                android:text="@string/uilayout_tv23"
                android:textSize="20sp"
                android:layout_below="@id/tv22"
                android:textStyle="bold"/>
            <TextView
                android:id="@+id/tv24"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/tv23"
                android:layout_marginStart="10dp"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="10dp"
                android:justificationMode="inter_word"
                android:lineSpacingExtra="5sp"
                android:text="@string/uilayout_tv24"
                android:textSize="15sp" />
            <TextView
                android:id="@+id/tv25"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:layout_marginStart="10dp"
                android:text="@string/uilayout_tv25"
                android:textSize="20sp"
                android:layout_below="@id/tv24"
                android:textStyle="bold"/>

            <TextView
                android:id="@+id/tv26"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/tv25"
                android:layout_marginStart="10dp"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="10dp"
                android:justificationMode="inter_word"
                android:lineSpacingExtra="5sp"
                android:text="@string/uilayout_tv26"
                android:textSize="15sp" />

            <TextView
                android:id="@+id/tv27"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:layout_marginStart="10dp"
                android:text="@string/uilayout_tv27"
                android:textSize="20sp"
                android:layout_below="@id/tv26"
                android:textStyle="bold"/>
            <TextView
                android:id="@+id/tv28"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/tv27"
                android:layout_marginStart="10dp"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="10dp"
                android:justificationMode="inter_word"
                android:lineSpacingExtra="5sp"
                android:text="@string/uilayout_tv28"
                android:textSize="15sp" />
            <TextView
                android:id="@+id/tv29"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:layout_marginStart="10dp"
                android:text="@string/uilayout_tv29"
                android:textSize="20sp"
                android:layout_below="@id/tv28"
                android:textStyle="bold"/>

            <TextView
                android:id="@+id/tv30"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/tv29"
                android:layout_marginStart="10dp"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="10dp"
                android:justificationMode="inter_word"
                android:lineSpacingExtra="5sp"
                android:text="@string/uilayout_tv30"
                android:textSize="15sp" />

            <TextView
                android:id="@+id/tv31"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:layout_marginStart="10dp"
                android:text="@string/uilayout_tv31"
                android:textSize="20sp"
                android:layout_below="@id/tv30"
                android:textStyle="bold"/>
            <TextView
                android:id="@+id/tv32"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/tv31"
                android:layout_marginStart="10dp"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="10dp"
                android:justificationMode="inter_word"
                android:lineSpacingExtra="5sp"
                android:text="@string/uilayout_tv32"
                android:textSize="15sp" />
            <TextView
                android:id="@+id/tv33"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:layout_marginStart="10dp"
                android:text="@string/uilayout_tv33"
                android:textSize="20sp"
                android:layout_below="@id/tv32"
                android:textStyle="bold"/>

            <TextView
                android:id="@+id/tv34"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/tv33"
                android:layout_marginStart="10dp"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="10dp"
                android:justificationMode="inter_word"
                android:lineSpacingExtra="5sp"
                android:text="@string/uilayout_tv34"
                android:textSize="15sp" />
        </RelativeLayout>
    </ScrollView>
</RelativeLayout>